Stop the sample from spilling over to page 2. Improve hidden text

--- a/styles/default/main.css
+++ b/styles/default/main.css
@@ -308,10 +308,25 @@ pre.hidden {
   line-height: 1pt;
   position: relative;
   left: 23%;
+  top: -9px;
   margin-bottom: 0;
   margin-right: 0;
   width: 77%;
   clear: both;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+pre.hidden::selection {
+  background: transparent;
+}
+
+pre.hidden::-moz-selection {
+  background: transparent;
 }
 
 pre.hidden code {
